--- a/HTML-TrainingAssignment/css/style3.css
+++ b/HTML-TrainingAssignment/css/style3.css
@@ -171,6 +171,10 @@ main .btn-group button {
   border-radius: 50%;
   flex-shrink: 0;
 }
+.offcanvas-backdrop {
+width: 100%;
+height: 100%;
+}
 
 @media (min-width: 992px) {
   .main-content {
